--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello",
+  "name": "practice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
     "mongoose-unique-validator": "^2.0.3",
@@ -18,10 +20,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "git push heroku master",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server -p3001 --watch db.json",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +46,10 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.3"
-  }
+    "eslint": "^7.28.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "ind.js",
+  "author": "",
+  "license": "ISC"
 }
